--- a/components/Login/login.module.css
+++ b/components/Login/login.module.css
@@ -1,12 +1,19 @@
 .login{
+    height: 100vh;
+    background-image: url(/backgroundt1.jpg);
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+.blogin{
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    background-image: radial-gradient(rgb(255, 255, 255),rgb(140, 0, 0));
     height: 100vh;
     padding: 5% 5% 7% 5%;
     gap: 25px;
+    backdrop-filter: blur(8px);
 }
 .backHome{
     display: flex;
@@ -14,7 +21,7 @@
     align-items: center;
     gap: 10px;
     border-radius: 20px;
-    border: 2px solid black;
+    border: none;
     color: black;
     padding: 8px 20px;
     background-image: radial-gradient(rgb(255, 255, 255),rgb(140, 0, 0));
@@ -24,32 +31,38 @@
     display: flex;
     border: none;
     border-radius: 20px;
-    box-shadow: 2px 6px 8px 10px rgb(0, 0, 0);
+    box-shadow: 2px 6px 8px 10px rgb(255, 255, 255);
     width: 80%;
-    background-image: url(/loginBg.jpg);
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
 }
 .leftLogin{
     padding: 5%;
-    border-radius: 20px 0 0 20px;
     width: 50%;
     display: flex;
     justify-content: center;
     align-items: center;
+    background-color: white;
+    border-radius: 20px 0 0 20px;
+}
+.bodyLogo{
+    width: 80%;
+    border-radius: 50%;
+    background-color: black;
+    filter: drop-shadow(2px 2px 10px rgb(189, 0, 0));
 }
 .imgLogin{
     filter: drop-shadow(0 0 5px rgb(0, 0, 0));
-    width: 80%;
+    width: 100%;
     height: auto;
 }
 .rightLogin{
     padding: 5% 30px;
     width: 50%;
-
-    border-radius: 0 20px 20px 0;
+    border-radius: 20px;
     display: flex;
+    text-align: center;
     flex-direction: column;
     gap: 15px;
 }
@@ -60,7 +73,7 @@
 .titleLogin2{
     font-size: 40px;
     font-weight: 600;
-    filter: drop-shadow(2px 2px 10px rgb(237, 237, 237));
+    filter: drop-shadow(2px 2px 10px rgb(248, 0, 0));
     color: white;
 }
 .formLogin{
@@ -87,7 +100,9 @@
 :hover.forgetPw{
     text-decoration: underline;
     filter: drop-shadow(2px 2px 10px rgb(149, 1, 1));
-    color: red;
+    color: rgb(0, 0, 0);
+    font-weight: 600;
+    
 }
 .btnLogin{
     background-image: radial-gradient(rgb(255, 255, 255),rgb(238, 0, 0));
@@ -96,6 +111,7 @@
     border-radius: 20px;
     color: black;
     font-weight: 700;
+    border: none;
 }
 :hover.btnLogin{
     background-image: url(/logot1.jpg);
