--- a/components/PublicComponents/About/about.module.css
+++ b/components/PublicComponents/About/about.module.css
@@ -200,4 +200,17 @@
     font-weight: 600;
     color: rgb(255, 196, 0);
 }
-
+.ss{
+    background-image: url(/ss.jpg);
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    width: 700px;
+    height: 550px;
+}
+.date{
+    display: flex;
+    justify-content: flex-end;
+    padding: 0px 5px;
+    font-weight: 550;
+}
