--- a/components/Employee/SideBar/sideBar.module.css
+++ b/components/Employee/SideBar/sideBar.module.css
@@ -10,6 +10,9 @@
     background-size: cover;
     justify-content: space-between;
 }
+.textName{
+    color: white;
+}
 .bodyInfo{
     display: flex;
     align-items: center;
@@ -37,6 +40,7 @@
 .textFeature{
     font-weight: 600;
     font-size: 20px;
+    color: white;
 }
 .feature:hover{
     background-color: white;
