--- a/components/Login/login.module.css
+++ b/components/Login/login.module.css
@@ -85,6 +85,7 @@
     align-items: center;
 }
 .titleForm{
+    color: white;
     font-size: 18px;
     filter: drop-shadow(2px 2px 10px rgb(0, 0, 0));
 }
@@ -96,6 +97,9 @@
 }
 :hover.inputForm{
     filter: drop-shadow(2px 2px 10px rgb(117, 0, 0));
+}
+.forgetPw{
+    color: white;
 }
 :hover.forgetPw{
     text-decoration: underline;
