--- a/components/PublicComponents/About/about.module.css
+++ b/components/PublicComponents/About/about.module.css
@@ -1,3 +1,6 @@
+.about{
+    --primary-color: white; 
+}
 .about1{
     padding: 20px;
     width: 100%;
@@ -12,10 +15,12 @@
 .titleLeft{
     font-size: 60px;
     font-weight: 600;
+    color: var(--primary-color);
 }
 .textLeft{
     font-size: 20px;
     text-align: justify;
+    color: var(--primary-color);
 }
 .slogan{
     display: flex;
@@ -78,14 +83,17 @@
 .titleSrch{
     font-size: 50px;
     font-weight: 600;
+    color: var(--primary-color);
 }
 .contentSrch{
     font-size: 18px;
+    color: var(--primary-color);
 }
 .btnSrch{
     padding: 8px 25px;
     border-radius: 20px;
     border: 2px solid white;
+    color: var(--primary-color);
 }
 .contact{
     display: flex;
@@ -147,6 +155,7 @@
     justify-content: center;
     align-items: center;
     gap: 10px;
+    color: var(--primary-color);    
 }
 .rightCtt{
     width: 40%;
