--- a/components/PublicComponents/Contact/contact.module.css
+++ b/components/PublicComponents/Contact/contact.module.css
@@ -1,3 +1,6 @@
+.contact{
+    --primary-color: white; 
+}
 .contact1{
     background-image: url(/contactImg.jpg);
     background-repeat: no-repeat;
@@ -11,6 +14,7 @@
 .titleCtt1{
     font-size: 60px;
     font-weight: 600;
+    color: var(--primary-color);
 }
 .contact2{
     display: flex;
@@ -69,6 +73,7 @@
     padding: 10px;
     border-radius: 15px;
     width: 80%;
+    color: var(--primary-color);
     font-weight: 600;
 }
 :hover.btnForm{
@@ -104,12 +109,14 @@
 }
 .contentCtt3{
     font-size: 18px;
+    color: var(--primary-color);
 }
 .btnCtt3{
     font-size: 18px;
     border: 1px solid white;
     border-radius: 15px;
     padding: 8px 25px;
+    color: var(--primary-color);
 }
 :hover.btnCtt3{
     background:linear-gradient(90deg, red, black);
