--- a/components/PublicComponents/Home/home.module.css
+++ b/components/PublicComponents/Home/home.module.css
@@ -1,6 +1,7 @@
 .home{
     width: 100%;
     height: auto;
+    --primary-color: white; 
 }
 .about{
     padding: 20px;
@@ -16,10 +17,12 @@
 .titleLeft{
     font-size: 80px;
     font-weight: 600;
+    color: var(--primary-color);
 }
 .textLeft{
     font-size: 20px;
     text-align: justify;
+     color: var(--primary-color);
 }
 .btnLeft{
     display: flex;
@@ -30,6 +33,7 @@
     padding: 5px 25px;
     border-radius: 15px;
     margin-top: 50px;
+     color: var(--primary-color);
 }
 :hover.btnLeft{
     padding: 7px 27px;
@@ -168,6 +172,7 @@
     align-items: center;
     background-color: rgb(1, 22, 114);
     padding: 10px 20px;
+     color: var(--primary-color);
     border-radius: 15px;
 }
 .contact{
@@ -230,6 +235,7 @@
     justify-content: center;
     align-items: center;
     gap: 10px;
+     color: var(--primary-color);
 }
 .rightCtt{
     width: 40%;
