--- a/components/Employee/SideBar/sideBar.module.css
+++ b/components/Employee/SideBar/sideBar.module.css
@@ -2,8 +2,7 @@
     display: flex;
     flex-direction: column;
     width: 20%;
-    height: 100vh;
-    position: absolute;
+    min-height: 100vh;
     background-image: url(/backgroudSideBar.jpg);
     background-position: center;
     background-repeat: no-repeat;
