--- a/components/PublicComponents/Footer/footer.module.css
+++ b/components/PublicComponents/Footer/footer.module.css
@@ -65,3 +65,95 @@
     display: flex;
     justify-content: center;
 }
+/* Overlay loading */
+.loadingOverlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  background-color: rgba(0, 0, 0, 0.5); /* Nền mờ */
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 1001; /* Đảm bảo overlay nằm trên các thành phần khác */
+}
+
+/* Spinner container */
+.loader {
+  position: relative;
+  width: 50px; /* Kích thước của spinner */
+  height: 50px;
+}
+
+/* Vòng tròn trong spinner */
+.loader div {
+  position: absolute;
+  width: 12px;
+  height: 12px;
+  background-color: #4c4cff; /* Màu xanh lam */
+  border-radius: 50%;
+  animation: loaderAnimation 1.2s linear infinite;
+}
+
+/* Vị trí từng vòng tròn */
+.loader div:nth-child(1) {
+  top: 0;
+  left: 50%;
+  transform: translateX(-50%);
+  animation-delay: -0.6s;
+}
+.loader div:nth-child(2) {
+  top: 14%;
+  left: 85%;
+  transform: translate(-50%, -50%);
+  animation-delay: -0.5s;
+}
+.loader div:nth-child(3) {
+  top: 50%;
+  left: 100%;
+  transform: translate(-50%, -50%);
+  animation-delay: -0.4s;
+}
+.loader div:nth-child(4) {
+  bottom: 14%;
+  left: 85%;
+  transform: translate(-50%, -50%);
+  animation-delay: -0.3s;
+}
+.loader div:nth-child(5) {
+  bottom: 0;
+  left: 50%;
+  transform: translateX(-50%);
+  animation-delay: -0.2s;
+}
+.loader div:nth-child(6) {
+  bottom: 14%;
+  left: 15%;
+  transform: translate(-50%, -50%);
+  animation-delay: -0.1s;
+}
+.loader div:nth-child(7) {
+  top: 50%;
+  left: 0;
+  transform: translate(-50%, -50%);
+  animation-delay: 0s;
+}
+.loader div:nth-child(8) {
+  top: 14%;
+  left: 15%;
+  transform: translate(-50%, -50%);
+  animation-delay: -0.7s;
+}
+
+/* Animation cho spinner */
+@keyframes loaderAnimation {
+  0% {
+    transform: scale(1);
+    opacity: 1;
+  }
+  100% {
+    transform: scale(0.3);
+    opacity: 0;
+  }
+}
