--- a/components/Employee/WorkShedule/workshedule.module.css
+++ b/components/Employee/WorkShedule/workshedule.module.css
@@ -223,3 +223,66 @@
     border: none;
   }
 }
+.eventStatus {
+  font-size: 0.9em;
+  font-weight: bold;
+  text-align: center;
+  margin-top: 5px;
+}
+
+.eventStatus:after {
+  content: '';
+  display: block;
+  width: 100%;
+  height: 2px;
+  margin-top: 2px;
+}
+
+.eventStatus.muộn {
+  color: red;
+}
+
+.eventStatus.hoàn-thành {
+  color: green;
+}
+.dateEventDay {
+  font-size: 0.9em;
+  color: #555;
+  margin-top: 5px;
+}
+.day {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  border: 1px solid #ddd;
+  padding: 10px;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+}
+
+.currentMonthDay.hoàn-thành {
+  background-color: #d4f8d4; /* Màu xanh lá nhạt */
+}
+
+.currentMonthDay.muộn {
+  background-color: #faacac; /* Màu đỏ nhạt */
+}
+
+.currentMonthDay.đang-làm-việc {
+  background-color: #f3f65a; /* Màu cam nhạt */
+}
+
+.otherMonthDay {
+  background-color: #f5f5f5;
+  color: #aaa;
+}
+
+.today {
+  border: 2px solid #007bff; /* Đánh dấu ngày hiện tại */
+}
+.currentMonthDay.unknown {
+  background-color: #f0f0f0; /* Màu xám nhạt */
+  color: #999; /* Màu chữ nhạt */
+}
+
