--- a/components/Employee/Timekeeping/timekeeping.module.css
+++ b/components/Employee/Timekeeping/timekeeping.module.css
@@ -27,12 +27,15 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  justify-content: center;
   margin-bottom: 20px;
+  width: 100%;
+  height: 100%;
 }
 
 .previewImg {
-  max-width: 250px;
-  max-height: 250px;
+  width: 50%;
+  height: 60%;
   border-radius: 10px;
   border: 2px solid #007bff;
   object-fit: cover;
@@ -107,3 +110,52 @@
 .hiddenCanvas {
   display: none;
 }
+
+.modal {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  background-color: rgba(0, 0, 0, 0.8);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 1000;
+}
+
+.modalContent {
+  background-color: #fff;
+  padding: 20px;
+  border-radius: 10px;
+  text-align: center;
+  position: relative;
+}
+
+.videoPreview {
+  width: 900px;
+  height: auto;
+  margin: 0 auto;
+  border-radius: 10px;
+}
+
+.captureButton,
+.closeButton {
+  margin: 10px;
+  padding: 10px 20px;
+  font-size: 16px;
+  cursor: pointer;
+  border: none;
+  border-radius: 5px;
+}
+
+.closeButton {
+  background-color: red;
+  color: white;
+}
+
+.captureButton {
+  background-color: green;
+  color: white;
+}
+
