--- a/components/Employee/Info/info.module.css
+++ b/components/Employee/Info/info.module.css
@@ -169,3 +169,39 @@
   color: #007bff;
 }
 
+.uploadLabel {
+  cursor: pointer;
+  color: #007bff;
+  text-decoration: underline;
+}
+
+.fileInput {
+  display: none;
+}
+.imageActions{
+  display: flex;
+  justify-content: space-around;
+  width: 60%;
+  margin-top: 20px;
+}
+.okButton{
+  padding: 3px 20px;
+  background-color: #007bff;
+  color: white;
+  border-radius: 5px;
+  border: 1px solid #007bff;
+}
+.okButton:hover{
+  background-color: #0056b3;
+}
+.cancelButton{
+  padding: 3px 7px;
+  background-color: white;
+  color: #007bff;
+  border-radius: 5px;
+  border: 1px solid #007bff;
+}
+.cancelButton:hover{
+  border: 1px solid red;
+  color: red;
+}
