--- a/components/Employee/Info/info.module.css
+++ b/components/Employee/Info/info.module.css
@@ -5,7 +5,6 @@
   justify-content: center;
   align-items: center;
   padding: 50px;
-  background-color: #f9f9f9;
   font-family: Arial, sans-serif;
   width: 80%;
 }
@@ -16,7 +15,6 @@
   background-color: #fff;
   border-radius: 10px;
   justify-content: center;
-  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
   width: 800px;
   padding: 20px;
 }
@@ -211,4 +209,22 @@
 .bodyTable{
   width: 100%;
   margin-top: 20px;
+}
+.cardInfo{
+  margin-top: 20px;
+  background-color: #fff;
+  width: 100%;
+  height: auto;
+  padding: 20px 10px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+   box-shadow: 2px 4px 10px rgba(0, 0, 0, 0.1);
+  border-radius: 10px;
+}
+.titleInfo{
+  color: black;
+  font-size: 30px;
+  font-weight: 800;
 }
