--- a/components/Employee/WorkShedule/workshedule.module.css
+++ b/components/Employee/WorkShedule/workshedule.module.css
@@ -151,6 +151,8 @@
 }
 .eventsOnDay{
   border: none;
+  display: flex;
+  justify-content: space-around;
   background-color: #FFE4C8;
   border-radius: 10px;
   padding: 10px 20px;
@@ -286,3 +288,16 @@
   color: #999; /* Màu chữ nhạt */
 }
 
+.checkOutButton {
+  background-color: #007bff;
+  color: white;
+  border: none;
+  padding: 5px 10px;
+  border-radius: 5px;
+  cursor: pointer;
+  margin-top: 5px;
+}
+
+.checkOutButton:hover {
+  background-color: #0056b3;
+}
