--- a/components/Employee/Asset/Model/Edit/edit.module.css
+++ b/components/Employee/Asset/Model/Edit/edit.module.css
@@ -215,3 +215,12 @@
     transform: translateY(0);
   }
 }
+.error {
+  color: red;
+  font-size: 12px;
+  margin-top: 5px;
+}
+
+.inputError {
+  border: 1px solid red;
+}
