--- a/components/Employee/Employee/employee.css
+++ b/components/Employee/Employee/employee.css
@@ -1,17 +1,40 @@
 .cardContainer {
     display: flex;
     flex-wrap: wrap; /* Cho phép xuống dòng */
-    gap: 30px; /* Khoảng cách giữa các thẻ */
+    gap: 20px; /* Khoảng cách giữa các thẻ */
     justify-content: space-around; /* Căn chỉnh theo chiều ngang */
+    padding: 30px;
+    
   }
   
   .cardContainer .ant-card {
-    flex: 1 1 calc(30% - 16px); /* Định nghĩa chiều rộng và khoảng cách */
-    max-width: calc(30% - 16px);
+    flex: 1 1 calc(25% - 16px); /* Định nghĩa chiều rộng và khoảng cách */
+    max-width: calc(25% - 16px);
+    border: 2px solid #ddd;
     box-shadow: 0 2px 8px rgba(0, 0, 0, 1);
     transition: transform 0.3s, box-shadow 0.3s;
+    position: relative;
+    overflow: hidden;
+  }
+  .cardContainer .ant-card::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 50%;
+    background: url(/bluebg.jpg);
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    opacity: 1; /* Điều chỉnh độ mờ */
+    z-index: 0;
   }
   
+  .cardContainer .ant-card > * {
+    position: relative;
+    z-index: 1; /* Đảm bảo nội dung không bị che */
+  }
   .cardContainer .ant-card:hover {
     transform: translateY(-5px);
     box-shadow: 0 4px 16px rgba(0, 0, 0, 0.2);
@@ -28,7 +51,12 @@
     font-size: 18px; /* Kích thước chữ */
     font-weight: bold; /* Đậm chữ */
   }
-  
+  @media (max-width: 1100px) {
+    .cardContainer .ant-card {
+      flex: 1 1 calc(30% - 16px); /* 2 card mỗi hàng */
+      max-width: calc(30% - 16px);
+    }
+  }
   /* Responsive cho màn hình nhỏ */
   @media (max-width: 768px) {
     .cardContainer .ant-card {
@@ -44,3 +72,21 @@
     }
   }
 /* Thanh tìm kiếm */
+/* Tùy chỉnh nút chứa dấu 3 chấm */
+.custom-button {
+  font-weight: 800; /* In đậm nút */
+  color: #000000; /* Màu chữ */
+  padding: 5px;
+  transition: transform 0.2s, color 0.3s;
+}
+
+.custom-button:hover {
+  color: #0056b3; /* Màu khi hover */
+  transform: scale(1.1); /* Phóng to nhẹ khi hover */
+}
+
+/* Tùy chỉnh riêng biểu tượng MoreOutlined */
+.custom-icon {
+  font-weight: bold; /* In đậm biểu tượng */
+  font-size: 18px; /* Tăng kích thước nếu cần */
+}
