--- a/components/Employee/Employee/employee.module.css
+++ b/components/Employee/Employee/employee.module.css
@@ -1,66 +1,49 @@
-.bodyEmployee{
-    display: flex;
-}
 .employee{
-    padding: 20px;
-    width: 80%;
+    width: 82%;
+    margin: 0;
+    padding: 0;
 }
 .titleEm{
-    font-weight: 600;
+    font-weight: 800;
     color: black;
     font-size: 50px;
+    text-shadow: 
+    2px 2px 0 #ffffff,  
+    -2px 2px 0 #ffffff, 
+    2px -2px 0 #ffffff, 
+    -2px -2px 0 #ffffff; 
+}
+.header{
+  background-image: url(/employeeHeader.jpg);
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  padding: 30px 20px;
 }
 .bodyCreateEm{
-    padding: 10px;
     display: flex;
-    justify-content: center;
-}
-.btnCreateEm{
-    padding: 5px 15px;
-    border: 1px solid green;
-    background-color: white;
-    color: green;
-    font-weight: 600;
-    border-radius: 10px;
-}
-:hover.btnCreateEm{
-    background-color: green;
-    color: white;
+    align-items: center;
+    padding: 10px;
+    gap: 20px;
+    width: 100%;
 }
 .bodyEmployee {
     display: flex;
-    background-color: #f0f2f5; /* Màu nền nhẹ */
-    height: 100vh;
+    flex-direction: row;
+    background-color: #f4f6f9;
   }
-  
-  .employee {
-    flex: 1;
-    padding: 20px;
-    background-color: #ffffff; /* Nền trắng */
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-    border-radius: 8px;
-    margin: 20px;
+  .searchInputs{
+    padding: 10px;
+    width: 40%;
+    border: 2px solid black;
   }
-  
-  .titleEm {
-    font-size: 24px;
-    font-weight: bold;
-    margin-bottom: 20px;
-    text-align: center;
-  }
-  
-  .bodyCreateEm {
-    text-align: right;
-    margin-bottom: 20px;
-  }
-  
   .btnCreateEm {
     background-color: #1890ff; /* Màu xanh Ant Design */
     color: white;
     padding: 10px 20px;
     border: none;
+    font-weight: 600;
     border-radius: 5px;
-    cursor: pointer;
     transition: background-color 0.3s;
   }
   
@@ -71,13 +54,13 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    padding: 0 0 50px 0;
+    padding: 0 0 20px 0;
     width: 100%;
   }
   .imgEm{
     background-color: #40a9ff;
-    width: 120px;
-    height: 120px;
+    width: 200px;
+    height: 200px;
     object-fit: cover;
     border-radius: 50%;
   }
@@ -107,8 +90,7 @@
   /* Container bọc thanh tìm kiếm */
   .searchContainer {
     display: flex;
-    justify-content: center; /* Căn giữa theo chiều ngang */
-    margin-bottom: 20px; /* Khoảng cách dưới */
+    width: 80%;
   }
   
   
